--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: CI - FlaskApp
+name: CI/CD - FlaskApp
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   test:
@@ -27,7 +27,7 @@ jobs:
 
   build_docker:
     runs-on: ubuntu-latest
-    needs: test   # only runs if tests pass
+    needs: test  # only runs if tests pass
 
     steps:
       - name: Checkout code
@@ -38,3 +38,14 @@ jobs:
 
       - name: Build Docker image
         run: docker build -t flaskapp .
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image
+        run: |
+          docker tag flaskapp ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
