--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker build -t flaskapp .
-
+        run: docker build -t gillesarthur/flaskapp:latest .
+        
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
