--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker build -t gillesarthur/flaskapp:latest .
+        run: docker build -t gillesarthur/flaskapp:latest -f ./Dockerfile .
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -49,3 +49,6 @@ jobs:
         run: |
           docker tag flaskapp ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+          
+      - name: List files in repo
+        run: ls -la
