--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Tag Docker image
+        run: docker tag flaskapp:latest ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+
 
       - name: Push Docker image
         run: |
