--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,21 +36,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        run: docker build -t gillesarthur/flaskapp:latest -f ./Dockerfile .
-        
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: Tag Docker image
-        run: docker tag flaskapp:latest ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
 
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest -f ./Dockerfile .
 
       - name: Push Docker image
-        run: |
-          docker push gillesarthur/flaskapp:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+
       - name: List files in repo
         run: ls -la
